This is the current homework

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,30 @@
         <h1 style = "font-size: 60px; text-align: center; font-family:Garamond, serif;">
             My Portfolio
         </h1>
+        <hr>
     </div>
-    <h1></h1>
+    <div class="pfp" style="display:flex; justify-items: space-between; align-items: center; border-bottom: 2px solid black; padding: 5px;">
+        <a class="Resume" href="./Vibhas Ramani Resume (2) (1).pdf">Resume</a>
+        <img src="./html pfp.jpg" alt="Picture of Vibhas Ramani">
+        <a class="LinkedIn" href="https://www.linkedin.com/in/vibhas-ramani-060207295/">LinkedIn</a>
+        
+    </div>
+    <h1 style="text-align: center; font-size: 50px;">About Me</h1>
+    <p style="font-size: 25px; font-family: 'Times New Roman', Times, serif;">
+        Born and raised in the country of Jamaica, I am currently 19 years old and attending the University
+        of Maryland USA. As a kid I always had big dreams to help others and solve issues which were going 
+        around the world. As a result, my CS journey began with a book of inventions which I keep to this
+        day. These inventions were first realized with a World Robotics Olympiad in Jamaica. I was attending
+        Hillel Academy at the time and we placed second. It was exilirating. The thrill I got from participating
+        in the competition, made me realize that this was what I wanted to do, and further cemented my path
+        to becoming a computer science student. Subsequently I ended up joining the computer science club at
+        my school and then finally pursuing a degree of computer science in the University of Maryland.
+
+        In regards to other aspects of my life apart from CS, I tend to enjoy reading, exercising, playing
+        the piano, journaling, playing video games and watching informational videos. I also have a passion
+        for leading, speaking and helping others, as can be seen by the things listed in my resume where I founded
+        the peer counselor organization in my school, delivering a welcome speech for the governor general of
+        Jamaica and taking on several leadership positions at my high school.
+    </p>
 </body>
 </html>
